oracle/ci/deployment/development/aws/oracle-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "oracle-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: oracle-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: "oracle-service"
          servicePort: 80
